--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -6,3 +6,13 @@ html {
   font-size: 14px;
   font-family: "Noto Sans KR", sans-serif;
 }
+
+.blind {
+  overflow: hidden;
+  position: absolute;
+  border: 0;
+  width: 1px;
+  height: 1px;
+  clip: rect(1px, 1px, 1px, 1px);
+  opacity: 0;
+}
