refactor: css코드 수정 - 불필요 코드 제거 - input number type 기본 속성 제거

--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -85,6 +85,16 @@ textarea:focus:-ms-input-placeholder {
   color: transparent;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
 button {
   border: 0 none;
   background: transparent;
