--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,10 +1,10 @@
-@import url("//fonts.googleapis.com/earlyaccess/notosanskr.css");
+@import url('//fonts.googleapis.com/earlyaccess/notosanskr.css');
 
-@import "./reset";
+@import './reset';
 
 html {
   font-size: 14px;
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .blind {
@@ -13,6 +13,5 @@ html {
   border: 0;
   width: 1px;
   height: 1px;
-  clip: rect(1px, 1px, 1px, 1px);
   opacity: 0;
 }
